Fix handler names
